# bizRAG

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: smoke-rabbitmq.yml
bizrag/: __init__.py  sdk.py
bizrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bizrag/api/: app.py  deps.py  schemas.py
bizrag/common/: __init__.py  chunk_defaults.py  io_utils.py  observability.py
bizrag/config/: kb_registry.yaml  retriever_docker.yaml  retriever_phase1_local.yaml
bizrag/contracts/: __init__.py  schemas.py
bizrag/docs/: BizAgentPlatform.md  ProjectStructure.md  RAGParameters.md
bizrag/entrypoints/: api_http.py  kb_admin_cli.py  retrieve_api.py  rustfs_mq_bridge.py  rustfs_mq_bridge_cli.py  rustfs_worker.py  rustfs_worker_cli.py
bizrag/infra/: __init__.py  metadata_store.py
bizrag/migrations/: __init__.py  knowledge_bases.py  runtime_lifecycle.py  source_parameters.py
bizrag/pipelines/: bm25_index.yaml  build_excel_corpus.yaml  build_mineru_corpus.yaml  build_text_corpus.yaml  corpus_chunk.yaml  eval_trec.yaml  eval_trec_pvalue.yaml  evaluate_results.yaml  load_data.yaml  rag_answer.yaml  (+6 more)
docker/: Dockerfile  bootstrap_runtime.py  dev_hot_reload.py  start_bizrag.sh
file_service/: .env.example  DESIGN.md  Dockerfile  README.md  requirements.txt  run.py
rag_eval_workspace/: README.md  run_m_ric_huggingface_doc.sh
scripts/: build_rag_eval_dataset.py  ci_smoke_rabbitmq.sh  export_bizrag_benchmark_dataset.py  rabbitmq_e2e.sh  run_bizrag_rag_eval.py
test/: manual_e2e_commands.md
(+122 files in other folders)
