[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bizrag"
version = "0.1.0"
description = "Minimal UltraRAG SDK integration project"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "ultrarag @ git+https://github.com/OpenBMB/UltraRAG.git@8e7f41199db17f31a50fa7e226a101e44495bb47",
    "PyYAML",
    "pandas",
    "PyMySQL",
    "xlrd>=2.0.1",
    "fastapi",
    "uvicorn",
    "watchfiles",
    "sentence-transformers==5.4.1",
    "bm25s==0.3.3",
    "numba",
    "transformers==4.57.6",
    "torch>=2.11.0,<2.12.0",
    "huggingface_hub==0.36.2",
    "python-dotenv",
    "openai",
    "Jinja2",
]

[project.optional-dependencies]
mq = [
    "aiokafka",
    "aio-pika",
]
eval = [
    "rouge-score",
    "tabulate",
    "pytrec-eval",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bizrag*"]
